--- a/obungi_report.html
+++ b/obungi_report.html
@@ -112,6 +112,7 @@
       margin-bottom: 6px;
       cursor: pointer;
       user-select: none;
+      flex-direction: row; /* 체크박스 왼쪽 정렬 */
     }
     .copy-success {
       color: green;
