--- a/jeongsang_report.html
+++ b/jeongsang_report.html
@@ -100,6 +100,19 @@
       height: 18px;
       cursor: pointer;
     }
+
+    /* 슈트 번호 참조 스타일 */
+    .suit-reference {
+      margin-top: 25px;
+      padding: 12px 16px;
+      background-color: #f0e6ff;
+      border: 2px solid #5f0080;
+      border-radius: 8px;
+      font-size: 0.95rem;
+      color: #3a0066;
+      user-select: text;
+      line-height: 1.4;
+    }
   </style>
 </head>
 <body>
@@ -140,6 +153,10 @@
 
   <button class="copy-btn" id="copyBtn">복사하기</button>
   <div class="copy-success" id="copySuccess">복사되었습니다!</div>
+
+  <div class="suit-reference" aria-label="슈트 번호 참조">
+    슈트 번호 참조: 1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ, 11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
+  </div>
 
 <script>
   const countInput = document.getElementById('countInput');
@@ -223,14 +240,3 @@ ${mentionsText}`;
       }).catch(() => {
         alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
       });
-    } else {
-      alert('이 브라우저는 복사 기능을 지원하지 않습니다.');
-    }
-  });
-
-  // 초기 입력란 생성 및 결과 업데이트
-  createSheetInputs(parseInt(countInput.value) || 1);
-  updateResult();
-</script>
-</body>
-</html>
