--- a/obungi_report.html
+++ b/obungi_report.html
@@ -108,11 +108,17 @@
     .mention-list label {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 6px;  /* 간격 조금 줄임 */
       margin-bottom: 6px;
       cursor: pointer;
       user-select: none;
       flex-direction: row; /* 체크박스 왼쪽 정렬 */
+    }
+    .mention-list input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+      margin-right: 4px; /* 체크박스와 텍스트 사이 간격 */
     }
     .copy-success {
       color: green;
@@ -148,14 +154,14 @@
 
     <label>멘션 선택 (복사 시 체크된 멘션만 포함)</label>
     <div class="mention-list" id="mentionList">
-      <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked />@손종선[평택HUB]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked />@신직호[평택HUB_분류]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@조규준[평택HUB_분류]" checked />@조규준[평택HUB_분류]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked />@김남일[평택 HUB _ SIOC]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked />@권미선[평택HUB_SIOC]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@정주석[평택HUB_분류]" checked />@정주석[평택HUB_분류]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@배도현 [평택HUB_출하]" checked />@배도현 [평택HUB_출하]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@김종학[평택HUB_출하]" checked />@김종학[평택HUB_출하]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked/>@손종선[평택HUB]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked/>@신직호[평택HUB_분류]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@조규준[평택HUB_분류]" checked/>@조규준[평택HUB_분류]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked/>@김남일[평택 HUB _ SIOC]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked/>@권미선[평택HUB_SIOC]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@정주석[평택HUB_분류]" checked/>@정주석[평택HUB_분류]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@배도현 [평택HUB_출하]" checked/>@배도현 [평택HUB_출하]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@김종학[평택HUB_출하]" checked/>@김종학[평택HUB_출하]</label>
     </div>
 
     <button onclick="copyToClipboard()">복사하기</button>
