--- a/round3_work_water.html
+++ b/round3_work_water.html
@@ -8,33 +8,25 @@
     body {
       font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
       background-color: #fff;
-      margin: 20px;
+      padding: 20px;
+      max-width: 480px;
+      margin: auto;
       color: #333;
     }
-    header {
-      font-size: 22px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      border-bottom: 1px solid #eee;
-      padding-bottom: 10px;
-    }
-    .fixed-text {
-      font-size: 18px;
-      margin-bottom: 15px;
+    h1 {
       color: #5f0080;
-      font-weight: 700;
-    }
-    .input-group {
+      text-align: center;
       margin-bottom: 20px;
     }
     label {
       display: block;
+      margin: 10px 0 5px;
       font-weight: 600;
-      margin-bottom: 6px;
-      color: #444;
+      color: #5f0080;
     }
+    input[type="text"],
     input[type="number"],
-    input[type="text"] {
+    textarea {
       width: 100%;
       padding: 8px 12px;
       font-size: 16px;
@@ -42,6 +34,13 @@
       border-radius: 6px;
       box-sizing: border-box;
       font-family: inherit;
+      resize: vertical;
+      margin-bottom: 10px;
+    }
+    textarea {
+      min-height: 120px;
+      background-color: #f3e8ff;
+      color: #5f0080;
     }
     .result-box {
       margin-top: 20px;
@@ -51,13 +50,13 @@
       background-color: #faf5ff;
       font-size: 18px;
       color: #5f0080;
-      user-select: text;
       white-space: pre-wrap;
-      min-height: 48px;
+      min-height: 140px;
+      user-select: text;
     }
     button.copy-btn {
       margin-top: 10px;
-      padding: 10px 20px;
+      padding: 12px 24px;
       font-size: 16px;
       background-color: #5f0080;
       color: white;
@@ -65,6 +64,7 @@
       border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      width: 100%;
     }
     button.copy-btn:hover {
       background-color: #7a1fb5;
@@ -74,112 +74,168 @@
       margin-top: 8px;
       font-weight: 600;
       display: none;
+      text-align: center;
     }
-    .checkbox-group {
-      margin-top: 20px;
-      font-size: 18px;
+    .mention-list {
+      margin-top: 10px;
+      border: 1px solid #5f0080;
+      border-radius: 8px;
+      padding: 10px 12px;
+      max-height: 140px;
+      overflow-y: auto;
+      background-color: #faf5ff;
+      font-size: 16px;
       color: #5f0080;
+    }
+    .mention-list label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 6px;
+      cursor: pointer;
       user-select: none;
     }
-    .checkbox-group label {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      font-weight: 500;
-      margin-right: 16px;
+    .mention-list input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
       cursor: pointer;
     }
-    .checkbox-group input[type="checkbox"] {
-      width: 22px;
-      height: 22px;
-      margin: 0;
-      flex-shrink: 0;
+    /* 체크리스트 스타일 */
+    .checklist-group {
+      margin-top: 20px;
+      border: 1px solid #5f0080;
+      border-radius: 8px;
+      padding: 12px 16px;
+      background-color: #faf5ff;
+      color: #5f0080;
+      font-weight: 600;
+      user-select: none;
+    }
+    .checklist-group legend {
+      font-weight: 700;
+      font-size: 1.1rem;
+      margin-bottom: 8px;
+    }
+    .checklist-group label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 8px;
+      cursor: pointer;
+      user-select: none;
+      font-weight: 600;
+    }
+    .checklist-group input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <header>6층 SIOC 생수 3회차 작업 상세 안내</header>
+  <h1>6층 SIOC 생수 3회차 작업 상세 안내</h1>
 
-  <div class="fixed-text">6층 SIOC 생수 3회차</div>
-  <div class="fixed-text">3회차</div>
+  <label for="pInput">P값 입력</label>
+  <input type="number" id="pInput" min="1" placeholder="예: 100" />
 
-  <div class="input-group">
-    <label for="pInput">P 입력</label>
-    <input type="number" id="pInput" min="1" max="999" placeholder="예: 15" />
+  <label for="timeInput">시간 입력 (예: 13:30)</label>
+  <input type="text" id="timeInput" placeholder="예: 13:30" />
+
+  <label>멘션 선택 (복사 시 체크된 멘션만 포함)</label>
+  <div class="mention-list" id="mentionList">
+    <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked />@손종선[평택HUB]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked />@신직호[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked />@김남일[평택 HUB _ SIOC]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked />@권미선[평택HUB_SIOC]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@홍지호 [FC자동화설비]" checked />@홍지호 [FC자동화설비]</label>
   </div>
 
-  <div class="input-group">
-    <label for="timeInput">시간 입력</label>
-    <input type="text" id="timeInput" placeholder="예: 08:40 또는 8시 40분" />
-  </div>
+  <!-- 📷 필요 사진 체크리스트 -->
+  <fieldset class="checklist-group">
+    <legend>📷 필요 사진 체크리스트</legend>
+    <label><input type="checkbox" class="photoCheck" checked /> 트럭사진</label>
+    <label><input type="checkbox" class="photoCheck" checked /> 내선 PLT</label>
+    <label><input type="checkbox" class="photoCheck" checked /> 물작업 최종 수량 엑셀 사진</label>
+  </fieldset>
 
-  <div class="result-box" id="resultText">
+  <!-- 💬 댓글 체크리스트 -->
+  <fieldset class="checklist-group">
+    <legend>💬 댓글 체크리스트</legend>
+    <label><input type="checkbox" class="commentCheck" checked /> 물작업 사진 10장</label>
+  </fieldset>
+
+  <div class="result-box" id="resultBox" aria-live="polite" aria-atomic="true">
     6층 SIOC 생수 3회차 ○○P 상차후 ○○:○○ 1층으로 내려갑니다.
-  </div>
 
-  <div class="checkbox-group" id="mentionsContainer">
-    <label><input type="checkbox" checked /> @손종선[평택HUB]</label>
-    <label><input type="checkbox" checked /> @신직호[평택HUB_분류]</label>
-    <label><input type="checkbox" checked /> @조규준[평택HUB_분류]</label>
-    <label><input type="checkbox" checked /> @김남일[평택 HUB _ SIOC]</label>
-    <label><input type="checkbox" checked /> @권미선[평택HUB_SIOC]</label>
-    <label><input type="checkbox" checked /> @정주석[평택HUB_분류]</label>
-    <label><input type="checkbox" checked /> @표상일 [평택HUB_분류]</label>
-    <label><input type="checkbox" checked /> @배도현 [평택HUB_출하]</label>
-    <label><input type="checkbox" checked /> @김종학[평택HUB_출하]</label>
+    @손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
+    @홍지호 [FC자동화설비]
   </div>
 
   <button class="copy-btn" id="copyBtn">복사하기</button>
-  <div id="copySuccess" class="copy-success">복사되었습니다!</div>
+  <div class="copy-success" id="copySuccess">복사되었습니다!</div>
 
   <script>
     const pInput = document.getElementById('pInput');
     const timeInput = document.getElementById('timeInput');
-    const resultText = document.getElementById('resultText');
-    const mentionsContainer = document.getElementById('mentionsContainer');
+    const mentionList = document.getElementById('mentionList');
+    const resultBox = document.getElementById('resultBox');
     const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
 
-    function padNumber(num, length = 2) {
-      return num.toString().padStart(length, '0');
-    }
+    const photoChecks = document.querySelectorAll('.photoCheck');
+    const commentChecks = document.querySelectorAll('.commentCheck');
 
     function updateResult() {
-      const pVal = pInput.value ? padNumber(pInput.value) + 'P' : '○○P';
+      const pVal = pInput.value.trim() || '○○';
       const timeVal = timeInput.value.trim() || '○○:○○';
 
-      // 선택된 멘션만 수집
-      const checkedMentions = Array.from(mentionsContainer.querySelectorAll('input[type="checkbox"]:checked'))
-        .map(cb => cb.parentElement.textContent.trim())
-        .join(' ');
+      // 멘션 체크된 항목만
+      const checkedMentions = Array.from(document.querySelectorAll('.mentionCheckbox:checked')).map(cb => cb.value);
+      const mentionsText = checkedMentions.join(' ');
 
-      resultText.textContent = `6층 SIOC 생수 3회차 ${pVal} 상차후 ${timeVal} 1층으로 내려갑니다.\n\n${checkedMentions}`;
+      // 체크된 사진 체크리스트 텍스트
+      const checkedPhotos = Array.from(photoChecks).filter(cb => cb.checked).map(cb => cb.parentElement.textContent.trim());
+      // 체크된 댓글 체크리스트 텍스트
+      const checkedComments = Array.from(commentChecks).filter(cb => cb.checked).map(cb => cb.parentElement.textContent.trim());
+
+      // 필요 사진 리스트 문구 (선택된 것만)
+      let photoListText = '';
+      if (checkedPhotos.length > 0) {
+        photoListText = '필요 사진 체크리스트:\n' + checkedPhotos.map(item => ' - ' + item).join('\n');
+      }
+
+      // 댓글 리스트 문구 (선택된 것만)
+      let commentListText = '';
+      if (checkedComments.length > 0) {
+        commentListText = '댓글 체크리스트:\n' + checkedComments.map(item => ' - ' + item).join('\n');
+      }
+
+      resultBox.textContent = `6층 SIOC 생수 3회차 ${pVal}P 상차후 ${timeVal} 1층으로 내려갑니다.
+
+${mentionsText}
+
+${photoListText}
+
+${commentListText}`;
       copySuccess.style.display = 'none';
     }
 
-    // 체크박스 변경시 복사 완료 메시지 숨김 및 결과 업데이트
-    mentionsContainer.addEventListener('change', () => {
-      copySuccess.style.display = 'none';
-      updateResult();
+    // 이벤트 리스너 등록
+    [pInput, timeInput, mentionList, ...photoChecks, ...commentChecks].forEach(el => {
+      el.addEventListener('input', updateResult);
+      el.addEventListener('change', updateResult);
     });
-
-    pInput.addEventListener('input', updateResult);
-    timeInput.addEventListener('input', updateResult);
 
     copyBtn.addEventListener('click', () => {
-      const textToCopy = resultText.textContent;
-      if (navigator.clipboard) {
-        navigator.clipboard.writeText(textToCopy).then(() => {
-          copySuccess.style.display = 'block';
-          setTimeout(() => { copySuccess.style.display = 'none'; }, 2000);
-        }).catch(() => {
-          alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
-        });
-      } else {
-        alert('이 브라우저는 복사 기능을 지원하지 않습니다.');
-      }
+      navigator.clipboard.writeText(resultBox.textContent).then(() => {
+        copySuccess.style.display = 'block';
+        setTimeout(() => { copySuccess.style.display = 'none'; }, 2000);
+      }).catch(() => {
+        alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
+      });
     });
 
+    // 초기 실행
     updateResult();
   </script>
 </body>
