--- a/hub_wheelsorter.html
+++ b/hub_wheelsorter.html
@@ -10,6 +10,14 @@
       background-color: #fff;
     }
 
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      color: #5f0080;
+      margin-bottom: 30px;
+      font-weight: bold;
+    }
+
     .button-container {
       display: flex;
       flex-direction: column; /* 버튼들을 세로로 쌓기 */
@@ -51,6 +59,8 @@
   </style>
 </head>
 <body>
+
+  <h1>허브 WHEELSORTER 공유</h1>
 
   <div class="button-container">
     <button class="category-button" onclick="goToPage('obungi_report.html')">
