--- a/obungi_report.html
+++ b/obungi_report.html
@@ -2,51 +2,60 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>오분기 입력 및 복사</title>
   <style>
     body {
       font-family: sans-serif;
       background: #f9f9f9;
-      padding: 30px;
+      padding: 16px;
+      margin: 0;
     }
+
     .container {
       background: white;
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      max-width: 700px;
+      max-width: 100%;
+      box-sizing: border-box;
       margin: auto;
     }
+
     label {
       display: block;
       margin: 12px 0 4px;
       font-weight: bold;
+      font-size: 1rem;
     }
+
     input, textarea {
       width: 100%;
-      padding: 8px;
-      font-size: 1em;
+      padding: 10px;
+      font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 6px;
       box-sizing: border-box;
-      margin-bottom: 8px;
+      margin-bottom: 12px;
     }
+
     textarea {
       resize: vertical;
-      min-height: 80px;
-      font-family: inherit;
+      min-height: 100px;
     }
+
     button {
       margin-top: 20px;
       width: 100%;
-      padding: 12px;
-      font-size: 1.1em;
+      padding: 14px;
+      font-size: 1.1rem;
       background-color: #5f0080;
       color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
     }
+
     .output {
       margin-top: 30px;
       background: #f0f0f0;
@@ -54,11 +63,13 @@
       border-radius: 10px;
       white-space: pre-line;
       font-family: monospace;
-      min-height: 140px;
+      font-size: 0.95rem;
       user-select: text;
+      min-height: 140px;
     }
+
     .suit-reference {
-      margin-top: 12px;
+      margin-top: 16px;
       padding: 10px 15px;
       background-color: #f0e6ff;
       border: 2px solid #5f0080;
@@ -68,64 +79,81 @@
       user-select: text;
       line-height: 1.4;
     }
+
     .dynamic-inputs {
       margin-bottom: 20px;
     }
+
     .dynamic-input-group {
       display: flex;
-      gap: 10px;
-      margin-bottom: 6px;
+      flex-direction: column;
+      gap: 8px;
+      margin-bottom: 12px;
     }
-    .dynamic-input-group input {
-      flex: 1;
-    }
+
     #orderTitles {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 6px;
-      font-weight: bold;
-      font-size: 1rem;
-      color: #333;
-      border-bottom: 2px solid #5f0080;
-      padding-bottom: 4px;
-      user-select: none;
+      display: none;
     }
-    #orderTitles > div {
-      flex: 1;
-      text-align: center;
-    }
+
     .mention-list {
       margin-top: 15px;
       border: 1px solid #5f0080;
       border-radius: 8px;
       padding: 12px;
-      max-height: 150px;
+      max-height: 180px;
       overflow-y: auto;
       background-color: #faf5ff;
-      font-size: 16px;
+      font-size: 0.95rem;
       color: #5f0080;
     }
+
     .mention-list label {
       display: flex;
       align-items: center;
-      gap: 6px;  /* 간격 조금 줄임 */
-      margin-bottom: 6px;
+      gap: 8px;
+      margin-bottom: 8px;
       cursor: pointer;
-      user-select: none;
-      flex-direction: row; /* 체크박스 왼쪽 정렬 */
     }
+
     .mention-list input[type="checkbox"] {
       width: 18px;
       height: 18px;
       cursor: pointer;
-      margin-right: 4px; /* 체크박스와 텍스트 사이 간격 */
     }
+
     .copy-success {
       color: green;
-      margin-top: 8px;
+      margin-top: 10px;
       font-weight: 600;
       display: none;
       user-select: none;
+      text-align: center;
+    }
+
+    @media (min-width: 600px) {
+      .dynamic-input-group {
+        flex-direction: row;
+      }
+
+      .dynamic-input-group input {
+        flex: 1;
+      }
+
+      #orderTitles {
+        display: flex;
+        gap: 10px;
+        margin-bottom: 8px;
+        font-weight: bold;
+        font-size: 1rem;
+        color: #333;
+        border-bottom: 2px solid #5f0080;
+        padding-bottom: 4px;
+      }
+
+      #orderTitles > div {
+        flex: 1;
+        text-align: center;
+      }
     }
   </style>
 </head>
@@ -219,7 +247,6 @@
       const errorZone = document.getElementById('errorZone').value.trim();
       const time = document.getElementById('time').value.trim();
 
-      // 체크된 멘션만 가져오기
       const checkedMentions = Array.from(document.querySelectorAll('.mentionCheckbox:checked')).map(cb => cb.value);
       const mentionsText = checkedMentions.join(' ');
 
@@ -265,7 +292,6 @@ ${mentionsText}`;
       }
     });
 
-    // 멘션 체크박스 변경 시 복사성공 메시지 숨기기 및 텍스트 갱신
     document.getElementById('mentionList').addEventListener('change', e => {
       if (e.target.classList.contains('mentionCheckbox')) {
         copySuccess.style.display = 'none';
