--- a/jeongsang_report.html
+++ b/jeongsang_report.html
@@ -3,108 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>정상분기 보고서 입력 (동적 지시 슈트 입력란)</title>
+  <title>오분기 입력 및 복사</title>
   <style>
     body {
-      font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
-      background-color: #fff;
+      font-family: sans-serif;
+      background: #f9f9f9;
+      padding: 16px;
+      margin: 0;
+    }
+
+    .container {
+      background: white;
       padding: 20px;
-      max-width: 480px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      max-width: 100%;
+      box-sizing: border-box;
       margin: auto;
-      color: #333;
     }
-    h1 {
-      color: #5f0080;
-      text-align: center;
-      margin-bottom: 20px;
-    }
+
     label {
       display: block;
-      margin: 10px 0 5px;
-      font-weight: 600;
-      color: #5f0080;
+      margin: 12px 0 4px;
+      font-weight: bold;
+      font-size: 1rem;
     }
-    input[type="text"],
-    input[type="number"],
-    textarea {
+
+    input, textarea {
       width: 100%;
-      padding: 8px 12px;
-      font-size: 16px;
+      padding: 10px;
+      font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 6px;
       box-sizing: border-box;
-      font-family: inherit;
-      resize: vertical;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
     }
+
     textarea {
-      min-height: 120px;
-      background-color: #f3e8ff;
-      color: #5f0080;
+      resize: vertical;
+      min-height: 100px;
     }
-    .result-box {
+
+    button {
       margin-top: 20px;
-      padding: 15px;
-      border: 1px solid #5f0080;
-      border-radius: 8px;
-      background-color: #faf5ff;
-      font-size: 18px;
-      color: #5f0080;
-      white-space: pre-wrap;
-      min-height: 120px;
-      user-select: text;
-    }
-    button.copy-btn {
-      margin-top: 10px;
-      padding: 12px 24px;
-      font-size: 16px;
+      width: 100%;
+      padding: 14px;
+      font-size: 1.1rem;
       background-color: #5f0080;
       color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
-      width: 100%;
-    }
-    button.copy-btn:hover {
-      background-color: #7a1fb5;
-    }
-    .copy-success {
-      color: green;
-      margin-top: 8px;
-      font-weight: 600;
-      display: none;
-      text-align: center;
-    }
-    .mention-list {
-      margin-top: 10px;
-      border: 1px solid #5f0080;
-      border-radius: 8px;
-      padding: 10px 12px;
-      max-height: 140px;
-      overflow-y: auto;
-      background-color: #faf5ff;
-      font-size: 16px;
-      color: #5f0080;
-    }
-    .mention-list label {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      margin-bottom: 6px;
-      cursor: pointer;
-      user-select: none;
-    }
-    .mention-list input[type="checkbox"] {
-      width: 18px;
-      height: 18px;
-      cursor: pointer;
     }
 
-    /* 슈트 번호 참조 스타일 */
+    .output {
+      margin-top: 30px;
+      background: #f0f0f0;
+      padding: 15px;
+      border-radius: 10px;
+      white-space: pre-line;
+      font-family: monospace;
+      font-size: 0.95rem;
+      user-select: text;
+      min-height: 140px;
+    }
+
     .suit-reference {
-      margin-top: 25px;
-      padding: 12px 16px;
+      margin-top: 16px;
+      padding: 10px 15px;
       background-color: #f0e6ff;
       border: 2px solid #5f0080;
       border-radius: 8px;
@@ -113,147 +79,224 @@
       user-select: text;
       line-height: 1.4;
     }
+
+    .dynamic-inputs {
+      margin-bottom: 20px;
+    }
+
+    .dynamic-input-group {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin-bottom: 12px;
+    }
+
+    /* 항상 보이도록 수정 */
+    #orderTitles {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 8px;
+      font-weight: bold;
+      font-size: 1rem;
+      color: #333;
+      border-bottom: 2px solid #5f0080;
+      padding-bottom: 4px;
+    }
+
+    #orderTitles > div {
+      flex: 1;
+      text-align: center;
+    }
+
+    .mention-list {
+      margin-top: 15px;
+      border: 1px solid #5f0080;
+      border-radius: 8px;
+      padding: 12px;
+      max-height: 180px;
+      overflow-y: auto;
+      background-color: #faf5ff;
+      font-size: 0.95rem;
+      color: #5f0080;
+    }
+
+    .mention-list label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 8px;
+      cursor: pointer;
+    }
+
+    .mention-list input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+    }
+
+    .copy-success {
+      color: green;
+      margin-top: 10px;
+      font-weight: 600;
+      display: none;
+      user-select: none;
+      text-align: center;
+    }
+
+    @media (min-width: 600px) {
+      .dynamic-input-group {
+        flex-direction: row;
+      }
+
+      .dynamic-input-group input {
+        flex: 1;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>정상분기 보고서 입력</h1>
+  <div class="container">
+    <h2>오분기 정보 입력 및 복사</h2>
 
-  <label for="countInput">정상분기 건수</label>
-  <input type="number" id="countInput" min="1" max="10" value="1" />
+    <label for="count">오분기 건수</label>
+    <input type="number" id="count" placeholder="예: 1" min="1" value="1" />
 
-  <div id="sheetInputsContainer">
-    <!-- 동적 입력란 생성됨 -->
+    <div id="orderTitles">
+      <div>지시 슈트 번호</div>
+      <div>지시 권역</div>
+    </div>
+
+    <div id="orderInputsContainer" class="dynamic-inputs"></div>
+
+    <label for="errorNo">오분기 슈트 번호 (사진 찍은 슈트 번호)</label>
+    <input type="text" id="errorNo" placeholder="예: 4" />
+
+    <label for="errorZone">오분기 권역</label>
+    <input type="text" id="errorZone" placeholder="예: H" />
+
+    <label for="time">발생시각</label>
+    <input type="text" id="time" placeholder="예: 16:19" />
+
+    <label>멘션 선택 (복사 시 체크된 멘션만 포함)</label>
+    <div class="mention-list" id="mentionList">
+      <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked/>@손종선[평택HUB]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked/>@신직호[평택HUB_분류]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked/>@김남일[평택 HUB _ SIOC]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked/>@권미선[평택HUB_SIOC]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@홍지호[FC자동화설비]" checked/>@홍지호[FC자동화설비]</label>
+    </div>
+
+    <button onclick="copyToClipboard()">복사하기</button>
+    <div class="copy-success" id="copySuccess">복사되었습니다!</div>
+
+    <div class="output" id="outputBox" aria-live="polite" aria-atomic="true"></div>
+
+    <div class="suit-reference" aria-label="슈트 번호 참조">
+      슈트 번호 참조: 1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ, 11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
+    </div>
   </div>
 
-  <label for="rejectedSuitInput">오분기 슈트</label>
-  <input type="text" id="rejectedSuitInput" placeholder="예: 리젝" />
+  <script>
+    const countInput = document.getElementById('count');
+    const orderInputsContainer = document.getElementById('orderInputsContainer');
+    const copySuccess = document.getElementById('copySuccess');
 
-  <label for="timeInput">발생 시각</label>
-  <input type="text" id="timeInput" placeholder="예: 23:10" />
+    function createOrderInputs(n) {
+      orderInputsContainer.innerHTML = '';
+      for (let i = 0; i < n; i++) {
+        const div = document.createElement('div');
+        div.className = 'dynamic-input-group';
 
-  <label>멘션 선택 (복사 시 체크된 멘션만 포함)</label>
-  <div class="mention-list" id="mentionList">
-    <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked />@손종선[평택HUB]</label>
-    <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked />@신직호[평택HUB_분류]</label>
-    <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked />@김남일[평택 HUB _ SIOC]</label>
-    <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked />@권미선[평택HUB_SIOC]</label>
-    <label><input type="checkbox" class="mentionCheckbox" value="@홍지호 [FC자동화설비]" checked />@홍지호 [FC자동화설비]</label>
-  </div>
+        const orderNoInput = document.createElement('input');
+        orderNoInput.type = 'text';
+        orderNoInput.placeholder = `지시 슈트 번호 ${i + 1}`;
+        orderNoInput.className = 'orderNo';
 
-  <div class="result-box" id="resultBox" aria-live="polite" aria-atomic="true">
-    정상분기건 ○건 발생하였습니다.
-    지시 슈트 : ○번 ○권역 N건
-    오분기 슈트 : ○○
-    발생시각 : ○○:○○ 분경
+        const orderZoneInput = document.createElement('input');
+        orderZoneInput.type = 'text';
+        orderZoneInput.placeholder = `예: H`;
+        orderZoneInput.className = 'orderZone';
 
-    @손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
-    @홍지호 [FC자동화설비]
-  </div>
+        div.appendChild(orderNoInput);
+        div.appendChild(orderZoneInput);
 
-  <button class="copy-btn" id="copyBtn">복사하기</button>
-  <div class="copy-success" id="copySuccess">복사되었습니다!</div>
-
-  <div class="suit-reference" aria-label="슈트 번호 참조">
-    슈트 번호 참조: 1=Y, 2=Y, 3=U, 4=H, 5=M, 6=H, 7=PT, 8=CS, 9=GW, 10=DJ, 11=CA, 12=JE, 13=CJ롯데, 14=CJ롯데
-  </div>
-
-<script>
-  const countInput = document.getElementById('countInput');
-  const sheetInputsContainer = document.getElementById('sheetInputsContainer');
-  const rejectedSuitInput = document.getElementById('rejectedSuitInput');
-  const timeInput = document.getElementById('timeInput');
-  const mentionList = document.getElementById('mentionList');
-  const resultBox = document.getElementById('resultBox');
-  const copyBtn = document.getElementById('copyBtn');
-  const copySuccess = document.getElementById('copySuccess');
-
-  // 동적으로 지시 슈트 입력란 생성 함수
-  function createSheetInputs(num) {
-    // 기존 input들 제거
-    sheetInputsContainer.innerHTML = '';
-    for (let i = 1; i <= num; i++) {
-      const label = document.createElement('label');
-      label.textContent = `지시 슈트 ${i} (예: 2번 Y권역 1건)`;
-      const input = document.createElement('input');
-      input.type = 'text';
-      input.className = 'sheetInput';
-      input.placeholder = '예: 2번 Y권역 1건';
-      input.addEventListener('input', updateResult);
-      sheetInputsContainer.appendChild(label);
-      sheetInputsContainer.appendChild(input);
-    }
-  }
-
-  function updateResult() {
-    const countVal = countInput.value || '○';
-
-    const sheetInputs = document.querySelectorAll('.sheetInput');
-    const filteredSheets = Array.from(sheetInputs)
-      .map(input => input.value.trim())
-      .filter(val => val.length > 0);
-
-    // "/" 로 구분된 지시 슈트 문자열 생성
-    const sheetsStr = filteredSheets.length > 0 ? filteredSheets.join(' / ') : '○번 ○권역 N건';
-    const rejectedVal = rejectedSuitInput.value.trim() || '○○';
-    const timeVal = timeInput.value.trim() || '○○:○○';
-
-    // 체크된 멘션만 가져오기
-    const checkedMentions = Array.from(document.querySelectorAll('.mentionCheckbox:checked')).map(cb => cb.value);
-    const mentionsText = checkedMentions.join(' ');
-
-    // 정상분기 건수 숫자가 1 이상일 때, countVal으로 표시
-    let countDisplay = countVal;
-    if(isNaN(Number(countVal)) || Number(countVal) < 1) {
-      countDisplay = '○';
+        orderInputsContainer.appendChild(div);
+      }
     }
 
-    resultBox.textContent = `정상분기건 ${countDisplay}건 발생하였습니다.
-지시 슈트 : ${sheetsStr}
-오분기 슈트 : ${rejectedVal}
-발생시각 : ${timeVal} 분경
+    function generateText() {
+      const orderNos = Array.from(document.querySelectorAll('.orderNo')).map(i => i.value.trim());
+      const orderZones = Array.from(document.querySelectorAll('.orderZone')).map(i => i.value.trim());
+
+      const orderPairs = [];
+      for (let i = 0; i < Math.max(orderNos.length, orderZones.length); i++) {
+        const no = orderNos[i] || '';
+        const zone = orderZones[i] || '';
+        if (no === '' && zone === '') continue;
+        orderPairs.push(`${no ? no + '번' : ''} ${zone ? zone + ' 권역' : ''}`.trim());
+      }
+      const orderStr = orderPairs.join(' / ');
+
+      const errorNo = document.getElementById('errorNo').value.trim();
+      const errorZone = document.getElementById('errorZone').value.trim();
+      const time = document.getElementById('time').value.trim();
+
+      const checkedMentions = Array.from(document.querySelectorAll('.mentionCheckbox:checked')).map(cb => cb.value);
+      const mentionsText = checkedMentions.join(' ');
+
+      const count = orderPairs.length || 1;
+
+      const text = `단독 오분기건 ${count}건 발생하였습니다.
+지시 슈트 : ${orderStr}
+오분기 슈트 : ${errorNo ? errorNo + '번' : ''} ${errorZone ? errorZone + ' 권역' : ''}
+발생시각 : ${time ? time + ' 분경' : ''}
 
 ${mentionsText}`;
-    copySuccess.style.display = 'none';
-  }
 
-  // 이벤트 리스너 등록
-  countInput.addEventListener('input', () => {
-    let val = parseInt(countInput.value);
-    if (isNaN(val) || val < 1) val = 1;
-    if (val > 10) val = 10;
-    countInput.value = val;
-    createSheetInputs(val);
-    updateResult();
-  });
-
-  rejectedSuitInput.addEventListener('input', updateResult);
-  timeInput.addEventListener('input', updateResult);
-
-  mentionList.addEventListener('change', e => {
-    if (e.target.classList.contains('mentionCheckbox')) {
-      copySuccess.style.display = 'none';
-      updateResult();
+      document.getElementById('outputBox').textContent = text;
     }
-  });
 
-  copyBtn.addEventListener('click', () => {
-    if (navigator.clipboard) {
-      navigator.clipboard.writeText(resultBox.textContent).then(() => {
+    function copyToClipboard() {
+      generateText();
+      const text = document.getElementById('outputBox').textContent;
+      if (!text.trim()) return alert("복사할 내용이 없습니다.");
+
+      navigator.clipboard.writeText(text).then(() => {
         copySuccess.style.display = 'block';
         setTimeout(() => { copySuccess.style.display = 'none'; }, 2000);
       }).catch(() => {
-        alert('복사에 실패했습니다. 수동으로 복사해 주세요.');
+        alert("복사 실패! 수동으로 복사해 주세요.");
       });
-    } else {
-      alert('이 브라우저는 클립보드 복사를 지원하지 않습니다.');
     }
-  });
 
-  // 페이지 로드 시 초기화
-  window.addEventListener('DOMContentLoaded', () => {
-    createSheetInputs(parseInt(countInput.value) || 1);
-    updateResult();
-  });
-</script>
+    countInput.addEventListener('input', () => {
+      let n = parseInt(countInput.value);
+      if (isNaN(n) || n < 1) n = 1;
+      createOrderInputs(n);
+      generateText();
+    });
+
+    ['errorNo','errorZone','time'].forEach(id => {
+      document.getElementById(id).addEventListener('input', generateText);
+    });
+
+    orderInputsContainer.addEventListener('input', e => {
+      if(e.target.classList.contains('orderNo') || e.target.classList.contains('orderZone')){
+        generateText();
+      }
+    });
+
+    document.getElementById('mentionList').addEventListener('change', e => {
+      if (e.target.classList.contains('mentionCheckbox')) {
+        copySuccess.style.display = 'none';
+        generateText();
+      }
+    });
+
+    window.onload = () => {
+      createOrderInputs(parseInt(countInput.value) || 1);
+      generateText();
+    };
+  </script>
 </body>
 </html>
