--- a/round3_work_water.html
+++ b/round3_work_water.html
@@ -145,9 +145,13 @@
   <div class="mention-list" id="mentionList">
     <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked />@손종선[평택HUB]</label>
     <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked />@신직호[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@조규준[평택HUB_분류]" checked />@조규준[평택HUB_분류]</label>
     <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked />@김남일[평택 HUB _ SIOC]</label>
     <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked />@권미선[평택HUB_SIOC]</label>
-    <label><input type="checkbox" class="mentionCheckbox" value="@홍지호 [FC자동화설비]" checked />@홍지호 [FC자동화설비]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@정주석[평택HUB_분류]" checked />@정주석[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@표상일[평택HUB_분류]" checked />@표상일[평택HUB_분류]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@배도현[평택HUB_출하]" checked />@배도현[평택HUB_출하]</label>
+    <label><input type="checkbox" class="mentionCheckbox" value="@김종학[평택HUB_출하]" checked />@김종학[평택HUB_출하]</label>
   </div>
 
   <!-- 💬 댓글 체크리스트 -->
@@ -159,8 +163,8 @@
   <div class="result-box" id="resultBox" aria-live="polite" aria-atomic="true">
     6층 SIOC 생수 3회차 ○○P 상차후 ○○:○○ 1층으로 내려갑니다.
 
-    @손종선[평택HUB] @신직호[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
-    @홍지호 [FC자동화설비]
+@손종선[평택HUB] @신직호[평택HUB_분류] @조규준[평택HUB_분류] @김남일[평택 HUB _ SIOC] @권미선[평택HUB_SIOC]
+@정주석[평택HUB_분류] @표상일[평택HUB_분류] @배도현[평택HUB_출하] @김종학[평택HUB_출하]
   </div>
 
   <button class="copy-btn" id="copyBtn">복사하기</button>
