--- a/obungi_report.html
+++ b/obungi_report.html
@@ -181,12 +181,9 @@
     <div class="mention-list" id="mentionList">
       <label><input type="checkbox" class="mentionCheckbox" value="@손종선[평택HUB]" checked/>@손종선[평택HUB]</label>
       <label><input type="checkbox" class="mentionCheckbox" value="@신직호[평택HUB_분류]" checked/>@신직호[평택HUB_분류]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@조규준[평택HUB_분류]" checked/>@조규준[평택HUB_분류]</label>
       <label><input type="checkbox" class="mentionCheckbox" value="@김남일[평택 HUB _ SIOC]" checked/>@김남일[평택 HUB _ SIOC]</label>
       <label><input type="checkbox" class="mentionCheckbox" value="@권미선[평택HUB_SIOC]" checked/>@권미선[평택HUB_SIOC]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@정주석[평택HUB_분류]" checked/>@정주석[평택HUB_분류]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@배도현 [평택HUB_출하]" checked/>@배도현 [평택HUB_출하]</label>
-      <label><input type="checkbox" class="mentionCheckbox" value="@김종학[평택HUB_출하]" checked/>@김종학[평택HUB_출하]</label>
+      <label><input type="checkbox" class="mentionCheckbox" value="@홍지호[FC자동화설비]" checked/>@홍지호[FC자동화설비]</label>
     </div>
 
     <button onclick="copyToClipboard()">복사하기</button>
@@ -217,7 +214,7 @@
 
         const orderZoneInput = document.createElement('input');
         orderZoneInput.type = 'text';
-        orderZoneInput.placeholder = `예: H`;  // 여기 placeholder 예시 변경됨
+        orderZoneInput.placeholder = `예: H`;
         orderZoneInput.className = 'orderZone';
 
         div.appendChild(orderNoInput);
